@@ -7,6 +7,7 @@ Version 3.15.1 (rgerhards), 2008-04-??
 - file relputil.c deleted, is not actually needed
 - added more meaningful error messages to rsyslogd (when some errors
   happens during startup)
+- bugfix: memory leaks in script engine
 ---------------------------------------------------------------------------
 Version 3.15.0 (rgerhards), 2008-04-01
 - major new feature: imrelp/omrelp support reliable delivery of syslog
